[package]
name = "bewebdev-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
diesel = "2.1.0"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
