[package]
name = "bewebdev-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
utoipa = { version = "3.4.4" }
utoipa-swagger-ui = { version = "3.1.5", features = ['axum'] }
